# srg-llvm-pass-tutorial

./: .gitignore  CMakeLists.txt  LICENCE  README.md
helloPass/: CMakeLists.txt  Hello.cpp  README.md  run.sh.in  run_pass_in_clang.sh.in  simple_prog.c
stripDeadFunctionsDemo/: CMakeLists.txt  README.md  simple.c  strip.sh  strip.sh.in
toolDemo/: CMakeLists.txt  tool.cpp
usingAnalyses/: CMakeLists.txt  CycleDetect.cpp  README.md  has_cycle.c  no_cycle.c  run.sh.in
usingIRBuilder/: CMakeLists.txt  README.md  ReplaceGetGlobalID.cpp  foo.cl  run.sh.in
visualisationDemos/: CMakeLists.txt  README.md  call_graph.sh  call_graph.sh.in  calls.c  control_flow_graph.sh  control_flow_graph.sh.in  dominator_tree.sh  dominator_tree.sh.in  loop.c  region_graph.sh  region_graph.sh.in
